# back/api/internal/passwords.go
@@ -1,0 +1,11 @@
+package internal
+
+import "golang.org/x/crypto/bcrypt"
+
+func HashPassword(password string) ([]byte, error) {
+	return bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
+}
+
+func CheckPasswordHash(password string, hash []byte) error {
+	return bcrypt.CompareHashAndPassword(hash, []byte(password))
+}
